--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script:
      [ "${K8S_CONTINUOUS_DEPLOYMENT}" == "true" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&
      [ "${TRAVIS_BRANCH}" == "master" ];
   then
-    openssl aes-256-cbc -K $encrypted_6dcdd37ad8d6_key -iv $encrypted_6dcdd37ad8d6_iv
-                        -in secret-mojp-k8s-ops.json.enc -out k8s-ops-secret.json -d &&
+    openssl aes-256-cbc -K $encrypted_f32f35ec6644_key -iv $encrypted_f32f35ec6644_iv
+                        -in mojp-k8s-ops-json-secret.enc -out k8s-ops-secret.json -d &&
     git clone --depth 1 "https://github.com/${K8S_OPS_REPO_SLUG}.git" "${K8S_OPS_REPO_DIRECTORY}" &&
     docker pull "${K8S_OPS_DOCKER_IMAGE}" &&
     docker run -it -v "`pwd`/k8s-ops-secret.json:/k8s-ops/secret.json"
