--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,8 @@
 language: bash
 sudo: required
 env:
-- >-
-  K8S_CONTINUOUS_DEPLOYMENT=true
-  K8S_OPS_REPO_SLUG=Beit-Hatfutsot/mojp-k8s
-  K8S_OPS_REPO_DIRECTORY=mojp-k8s
-  K8S_OPS_DOCKER_IMAGE=orihoch/mojp-k8s
-  K8S_OPS_ENVIRONMENT=production
+- K8S_CONTINUOUS_DEPLOYMENT=true
 services:
 - docker
 script:
-- >-
-  if ! echo "${TRAVIS_COMMIT_MESSAGE}" | grep -- --no-deploy >/dev/null &&
-     [ "${K8S_CONTINUOUS_DEPLOYMENT}" == "true" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ] &&
-     [ "${TRAVIS_BRANCH}" == "master" ];
-  then
-    openssl aes-256-cbc -K $encrypted_f32f35ec6644_key -iv $encrypted_f32f35ec6644_iv
-                        -in mojp-k8s-ops-json-secret.enc -out k8s-ops-secret.json -d &&
-    git clone --depth 1 "https://github.com/${K8S_OPS_REPO_SLUG}.git" "${K8S_OPS_REPO_DIRECTORY}" &&
-    docker pull "${K8S_OPS_DOCKER_IMAGE}" &&
-    docker run -it -v "`pwd`/k8s-ops-secret.json:/k8s-ops/secret.json"
-                   -v "`pwd`/${K8S_OPS_REPO_DIRECTORY}:/ops"
-                   "${K8S_OPS_DOCKER_IMAGE}"
-                   -c "source ~/.bashrc; source switch_environment.sh ${K8S_OPS_ENVIRONMENT};
-
-                       ./helm_upgrade.sh
-
-                      ";
-  fi
+- ./continuous_deployment.sh
