added auto updated yaml values

--- a/values.production.yaml
+++ b/values.production.yaml
@@ -1,27 +1,34 @@
 back:
   etcBhsSecretName: etc-bhs
-  image: gcr.io/bh-org-01/mojp-dbs-back:0051e9ac170d9c42dd4c3d2f3a7ce7247d33663e
+
 front:
   etcBhsSecretName: etc-bhs
-  image: gcr.io/bh-org-01/mojp-dbs-front:fbeabfd1846f294c25b0024d5d21c84c3ea30d42
+
 global:
   defaultNodePool: default-pool
   enableSitemap: true
+
 minio:
   envVarsSecretName: env-vars
   persistentDiskName: dbs-production-minio-data
+
 nginx:
   htpasswdSecretName: nginx-htpasswd
+
 pipelines:
   envVarsSecretName: env-vars
   image: orihoch/mojp-dbs-back-pipelines:sitemap-aws-principal-patch
   sitemapEsHost: bhs-prod-db
   sitemapEsIndex: mojp-prod
+
 traefik:
-  acmeDomains: "[[acme.domains]]\n  main = \"test-dbs.bh.org.il\"\n[[acme.domains]]\n\
-    \  main = \"test-api.dbs.bh.org.il\"\n"
+  acmeDomains: |
+    [[acme.domains]]
+      main = "test-dbs.bh.org.il"
+    [[acme.domains]]
+      main = "test-api.dbs.bh.org.il"
   acmeEmail: ori@uumpa.com
   enableCjhProxy: true
-  frontHostRule: 'Host: dbs.bh.org.il, test-dbs.bh.org.il;'
+  frontHostRule: "Host: dbs.bh.org.il, test-dbs.bh.org.il;"
   loadBalancerIP: 35.205.123.187
   nodeHostName: gke-mojp-default-pool-33bac5d8-rm42
