--- a/.gitignore
+++ b/.gitignore
@@ -79,9 +79,6 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
-# dotenv
-.env
-
 # virtualenv
 .venv
 venv/
@@ -100,8 +97,8 @@ ENV/
 # mypy
 .mypy_cache/
 
-.env
+/.env
 app_server.yaml
 front-nginx-prerender.conf
-secret-*
+secret*
 .idea
