--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: bash
 sudo: required
 env:
-- K8S_CONTINUOUS_DEPLOYMENT=true
+  matrix:
+  - DEPLOY_ENVIRONMENT=production
 services:
 - docker
 script:
-- ./continuous_deployment.sh
+- |
+  if [ "${DEPLOY_ENVIRONMENT}" != "" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ] && [ "${TRAVIS_BRANCH}" == "master" ] &&\
+     [ "${TRAVIS_COMMIT_MESSAGE}" != "" ] && ! echo "${TRAVIS_COMMIT_MESSAGE}" | grep -- --no-deploy && [ "${TRAVIS_COMMIT}" != "" ]
+  then
+      openssl aes-256-cbc -K $encrypted_f32f35ec6644_key -iv $encrypted_f32f35ec6644_iv -in mojp-k8s-ops-json-secret.enc -out secret-mojp-k8s-ops.json -d
+      ./run_docker_ops.sh "${DEPLOY_ENVIRONMENT}" "
+          cd /ops
+          ! ./helm_upgrade.sh \
+              && echo 'failed helm upgrade' && exit 1
+          exit 0
+      "
+  fi
