--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,7 @@ script:
           ! ./helm_upgrade.sh \
               && echo 'failed helm upgrade' && exit 1
           exit 0
-      "
+      " \
+      "orihoch/sk8s-ops@sha256:6c368f75207229c8bb2ccb99bd6414dfb21289c5c988d2381a9da2015f55bd38" \
+      "Beit-Hatfutsot/mojp-k8s" "master"
   fi
