update to latest sk8s version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ env:
   matrix:
   - >
     DEPLOY_ENVIRONMENT=production
-    DEPLOY_BRANCH=cd-refactor-add-kibana-elasticsearch
+    DEPLOY_BRANCH=master
     DEPLOY_REPO=Beit-Hatfutsot/mojp-k8s
-  - >
-    DEPLOY_ENVIRONMENT=staging
-    DEPLOY_BRANCH=cd-refactor-add-kibana-elasticsearch
-    DEPLOY_REPO=Beit-Hatfutsot/mojp-k8s
+#  - >
+#    DEPLOY_ENVIRONMENT=staging
+#    DEPLOY_BRANCH=master
+#    DEPLOY_REPO=Beit-Hatfutsot/mojp-k8s
 services:
 - docker
 script:
