--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -39,3 +39,9 @@ kibana:
 elasticsearch:
   enabled: false
   nodePool: staging-debug-pool
+
+mojp-dbs-pipelines:
+  enabled: true
+  clearmashGetEntityIdsJob:
+    suffix: 2017-12-22-c
+    image: gcr.io/bh-org-01/mojp-dbs-pipelines:132db443cac078af5c6112b8fdebff44f9f5bd3f
