update get entity ids job to latest pipelines version with fix for max recursion depth --no-deploy

--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -8,6 +8,9 @@ global:
   defaultNodePool: staging-pool
   enableSitemap: false
   debug: true
+  environmentName: staging
+  opsRepoSlug: Beit-Hatfutsot/mojp-k8s
+  opsRepoBranch: master
 
 minio:
   enabled: false
@@ -40,17 +43,34 @@ elasticsearch:
   enabled: false
   nodePool: staging-debug-pool
 
+
 mojp-dbs-pipelines:
   enabled: true
   clearmashGetEntityIdsJob:
     name: clearmash-get-entity-ids
+    # schedule: "@daily"
     nodePool: default-pool
-    image: gcr.io/bh-org-01/mojp-dbs-pipelines:d448ef987680eb65c5fe892b4d107140ec6b5b77
+    image: gcr.io/bh-org-01/mojp-dbs-pipelines:440a720ffd2f24494ca7753797bdd0d9c48b15d7
     pipelinesScript: dpp run ./clearmash/web-content-folder-item-ids
     secretEnvFrom: clearmash
-    opsImage: orihoch/sk8sops@sha256:6a7bddfa3f523306f5b62391b95b1cd00407053aa5a53f98dc643b5e344228ed
-    GS_BUCKET_NAME: mojp-dbs-pipelines-clearmash-scheduled-job
-    GCLOUD_PROJECT: bh-org-01
+    GS_BUCKET_NAME: mojp-dbs-pipelines-data
+    OUTPUT_PATH_PREFIX: clearmash-get-entity-ids-job-
+    # INITIAL_SYNC_SCRIPT: gsutil -m rsync -r gs://sk8s-pipelines-data/noise-2017-12-06/ /pipelines/data/
     opsSecretName: ops
+
+
     # gsutilSyncArgs: "-a public-read"
     # schedule: "@weekly"
+#  clearmashDownloadEntitiesJob:
+#    name: clearmash-download-entities
+#    nodePool: default-pool
+#    image: gcr.io/bh-org-01/mojp-dbs-pipelines:96ce218ec8edbf85801581de1a1596595d4bd057
+#    syncScript: gsutil -m rsync -r gs://mojp-dbs-pipelines-clearmash-scheduled-job/2017-12-26-18-11/ /pipelines/data/
+#    pipelinesScript: dpp run ./clearmash/download-entities
+#    secretEnvFrom: clearmash
+#    opsImage: orihoch/sk8sops@sha256:6a7bddfa3f523306f5b62391b95b1cd00407053aa5a53f98dc643b5e344228ed
+#    GS_BUCKET_NAME: mojp-dbs-pipelines-clearmash-scheduled-job
+#    GCLOUD_PROJECT: bh-org-01
+#    opsSecretName: ops
+#    # gsutilSyncArgs: "-a public-read"
+#    # schedule: "@weekly"
