--- a/charts-external/mojp-dbs-pipelines/templates/clearmash-get-entity-ids-job.yaml
+++ b/charts-external/mojp-dbs-pipelines/templates/clearmash-get-entity-ids-job.yaml
@@ -1,3 +1,24 @@
+
+# search and replace clearmashGetEntityIdsJob to your job name
+#
+# can be used as-is, set the following helm values:
+#
+# global:
+#   environmentName: staging
+#   opsRepoSlug: orihoch/sk8s
+#   opsRepoBranch: master
+# noise:
+#   name: noise
+#   # schedule: "@daily"
+#   nodePool: default-pool
+#   image: orihoch/sk8s-pipelines
+#   pipelinesScript: dpp run ./noise
+#   # secretEnvFrom: secret-env-vars
+#   GS_BUCKET_NAME: sk8s-pipelines-data
+#   OUTPUT_PATH_PREFIX: noise-
+#   # INITIAL_SYNC_SCRIPT: gsutil -m rsync -r gs://sk8s-pipelines-data/noise-2017-12-06/ /pipelines/data/
+#   opsSecretName: ops
+
 {{ if .Values.enabled }}{{ if .Values.clearmashGetEntityIdsJob }}
 apiVersion: batch/v1
 kind: Job
@@ -19,6 +40,7 @@ spec:
       containers:
       - name: pipelines
         image: {{ .Values.clearmashGetEntityIdsJob.image | quote }}
+        # the pipelineScript will contain something like 'dpp run ./noise'
         command:
         - bash
         - "-c"
@@ -35,37 +57,26 @@ spec:
             name: {{ .Values.clearmashGetEntityIdsJob.secretEnvFrom | quote }}
         {{ end }}
       - name: ops
-        image: {{ .Values.clearmashGetEntityIdsJob.opsImage | quote }}
+        image: "orihoch/sk8sops:pipelines-google-storage-sync"
         resources:
           requests:
             cpu: "0.01"
-            memory: "150Mi"
-        command:
-        - bash
-        - "-c"
-        - |
-          source ~/.bashrc
-          ! gcloud config set project "${GCLOUD_PROJECT}" \
-              && echo "Failed initialization" && exit 1
-          ! gsutil ls -b gs://${GS_BUCKET_NAME}/ \
-              && ! gsutil mb gs://${GS_BUCKET_NAME}/ \
-                  && echo "Failed to create bucket or authenticate with gs" && exit 1
-          echo 'waiting for pipelines to complete'
-          while ! [ -e /pipelines/data/done ]; do
-            sleep 5
-            echo .
-          done
-          rm -f /pipelines/data/done
-          ! gsutil -m rsync {{ .Values.clearmashGetEntityIdsJob.gsutilSyncArgs }}  \
-                            -r /pipelines/data "gs://${GS_BUCKET_NAME}/`date +%Y-%m-%d-%H-%M`/" \
-              && echo "gsutil rsync failed" && exit 1
-          echo "Great Success"
-          exit 0
+            memory: "100Mi"
         env:
+        - name: K8S_ENVIRONMENT
+          value: {{ .Values.global.environmentName }}
+        - name: OPS_REPO_SLUG
+          value: {{ .Values.global.opsRepoSlug }}
+        - name: OPS_REPO_BRANCH
+          value: {{ .Values.global.opsRepoBranch }}
         - name: GS_BUCKET_NAME
           value: {{ .Values.clearmashGetEntityIdsJob.GS_BUCKET_NAME | quote }}
-        - name: GCLOUD_PROJECT
-          value: {{ .Values.clearmashGetEntityIdsJob.GCLOUD_PROJECT }}
+        - name: OUTPUT_PATH_PREFIX
+          value: {{ .Values.clearmashGetEntityIdsJob.OUTPUT_PATH_PREFIX | quote }}
+        # can be used to sync from google storage, e.g.:
+        # gsutil -m rsync -r gs://bucket-name/path/ /pipelines/data/
+        - name: INITIAL_SYNC_SCRIPT
+          value: {{ .Values.clearmashGetEntityIdsJob.INITIAL_SYNC_SCRIPT | quote }}
         volumeMounts:
         - name: data
           mountPath: /pipelines/data
