--- a/templates/elasticsearch.yaml
+++ b/templates/elasticsearch.yaml
@@ -9,8 +9,6 @@ spec:
   ports:
   - port: 9200
     name: "9200"
-  - port: 9300
-    name: "9300"
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -23,11 +21,9 @@ spec:
     metadata:
       labels:
         app: elasticsearch
-      annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/elasticsearch-config.yaml") . | sha256sum }}
     spec:
       nodeSelector:
-        cloud.google.com/gke-nodepool: {{ .Values.elasticsearch.nodePool | quote }}
+        cloud.google.com/gke-nodepool: {{ .Values.global.defaultNodePool | quote }}
       containers:
       - name: sysctl-conf
         image: busybox:1.26.2
@@ -41,17 +37,8 @@ spec:
             memory: 5Mi
         securityContext:
           privileged: true
-      - image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.0
+      - image: budgetkey/open-budget-elasticsearch
         name: elasticsearch
         ports:
         - containerPort: 9200
-        - containerPort: 9300
-        volumeMounts:
-        - name: elasticsearch-conf
-          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
-          subPath: elasticsearch.yml
-      volumes:
-      - name: elasticsearch-conf
-        configMap:
-          name: elasticsearch-conf
 {{ end }}
