--- a/templates/kibana.yaml
+++ b/templates/kibana.yaml
@@ -20,22 +20,12 @@ spec:
     metadata:
       labels:
         app: kibana
-      annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/kibana-config.yaml") . | sha256sum }}
     spec:
       nodeSelector:
-        cloud.google.com/gke-nodepool: {{ .Values.kibana.nodePool | quote }}
+        cloud.google.com/gke-nodepool: {{ .Values.global.defaultNodePool | quote }}
       containers:
-      - image: docker.elastic.co/kibana/kibana-oss:6.1.0
+      - image: kibana:5.3
         name: kibana
         ports:
         - containerPort: 5601
-        volumeMounts:
-        - name: kibana-conf
-          mountPath: /usr/share/kibana/config/kibana.yml
-          subPath: kibana.yml
-      volumes:
-      - name: kibana-conf
-        configMap:
-          name: kibana-conf
 {{ end }}
