added mojp-dbs-elasticsearch, changed traefik backup to cronjob --no-deploy

--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -84,3 +84,7 @@ mojp-dbs-searchapi:
 mojp-dbs-searchapp:
   enabled: false
 #  nodePool: turbo-pool
+
+mojp-dbs-elasticsearch:
+  enabled: false
+#  nodePool: turbo-pool
