--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -1,16 +1,15 @@
 back:
   enabled: false
-  etcBhsSecretName: etc-bhs
+#  etcBhsSecretName: etc-bhs
 
 front:
   enabled: false
-  etcBhsSecretName: etc-bhs
+#  etcBhsSecretName: etc-bhs
 
 redis:
   enabled: false
 
 global:
-  defaultNodePool: default-pool
   enableSitemap: false
   debug: false
   environmentName: staging
@@ -41,46 +40,31 @@ traefik:
   acmeEmail: ori@uumpa.com
 #  enableCjhProxy: true
 #  frontHostRule: "Host: staging-dbs.bh.org.il;"
-  loadBalancerIP: 35.205.137.62
-  nodeHostName: gke-mojp-default-pool-33bac5d8-pp2t
+#  loadBalancerIP: 35.205.137.62
+#  nodeHostName: gke-mojp-default-pool-33bac5d8-pp2t
   rootHost: "staging-dbs.bh.org.il"
-  backupJob: true
+#  backupJob: true
 
 kibana:
   enabled: true
-  nodePool: turbo-pool
+  elasticsearchUrl: http://mojp-dbs-elasticsearch:9200
 
 elasticsearch:
-  enabled: true
-  nodePool: turbo-pool
+  enabled: false
 
 mojp-dbs-pipelines:
-  enabled: true
-  clearmashGetEntityIdsJob:
-    name: clearmash-get-entity-ids
-    # schedule: "@daily"
-    nodePool: default-pool
-    image: gcr.io/bh-org-01/mojp-dbs-pipelines:35ec0999d4cbafe444d01f8c8b799706d7883ead
-    pipelinesScript: dpp run ./clearmash/web-content-folder-item-ids
-    secretEnvFrom: clearmash
-    GS_BUCKET_NAME: mojp-dbs-pipelines-data
-    OUTPUT_PATH_PREFIX: clearmash-get-entity-ids-job-
-    # INITIAL_SYNC_SCRIPT: gsutil -m rsync -r gs://sk8s-pipelines-data/noise-2017-12-06/ /pipelines/data/
-    opsSecretName: ops
-  clearmashSplitEntitiesFoldersJob: true
-  clearmashDownloadEntitiesJob: true
-  clearmashPrepForElasticsearch: true
-  clearmashDumpToElasticsearchJob:
-    nodePool: turbo-pool
+  enabled: false
+#  clearmashGetEntityIdsJob: true
+#  clearmashSplitEntitiesFoldersJob: true
+#  clearmashDownloadEntitiesJob: true
+#  clearmashPrepForElasticsearch: true
 
 mojp-dbs-searchapi:
   enabled: true
-  nodePool: turbo-pool
+  ES_HOST: mojp-dbs-elasticsearch
 
 mojp-dbs-searchapp:
   enabled: true
-  nodePool: turbo-pool
 
 mojp-dbs-elasticsearch:
   enabled: true
-  nodePool: turbo-pool
