support continuous deployment of mojp-dbs-pipelines + add staging.myjewishstory.org

--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -32,32 +32,37 @@ pipelines:
 #  sitemapEsIndex: mojp-prod
 
 traefik:
+  enabled: true
   acmeDomains: |
     [[acme.domains]]
-      main = "staging-dbs-bh.uumpa.net"
-    [[acme.domains]]
-      main = "api.staging-dbs-bh.uumpa.net"
+      main = "staging.myjewishstory.org"
   acmeEmail: ori@uumpa.com
 #  enableCjhProxy: true
 #  frontHostRule: "Host: staging-dbs.bh.org.il;"
   loadBalancerIP: 35.188.195.70
   nodeHostName: gke-mojp2-default-pool-2a2857ee-0sn6
-  rootHost: "staging-dbs-bh.uumpa.net"
+  rootHost: "staging.myjewishstory.org"
 #  backupJob: true
 
 kibana:
   enabled: true
   elasticsearchUrl: http://mojp-dbs-elasticsearch:9200
 
-elasticsearch:
-  enabled: false
-
 mojp-dbs-pipelines:
-  enabled: false
-#  clearmashGetEntityIdsJob: true
-#  clearmashSplitEntitiesFoldersJob: true
-#  clearmashDownloadEntitiesJob: true
-#  clearmashPrepForElasticsearch: true
+  enabled: true
+  # these jobs will re-run only if any of the values change
+  clearmashDownloadEntitiesJob:
+    image: gcr.io/bh-org-01/mojp-dbs-pipelines:3670ab4098b65cc1642b35b8d8dee79f4f5bb3d5
+    input: gs://mojp-dbs-pipelines-data/2018-01-02-10-30/clearmash/entity-ids/
+  clearmashGetEntityIdsJob:
+    image: gcr.io/bh-org-01/mojp-dbs-pipelines:35ec0999d4cbafe444d01f8c8b799706d7883ead
+    input:
+  clearmashPrepForElasticsearch:
+    image: gcr.io/bh-org-01/mojp-dbs-pipelines:b62285d10954ed7902cf6f8d9d10b16022e61cd1
+    input: gs://mojp-dbs-pipelines-data/2018-01-02-12-29/clearmash/download-entities/
+  clearmashSplitEntitiesFoldersJob:
+    image: gcr.io/bh-org-01/mojp-dbs-pipelines:94f69b507a682400c1000509d6838d22973e5231
+    input: gs://mojp-dbs-pipelines-data/clearmash-get-entity-ids-job-2017-12-29-05-00
 
 mojp-dbs-searchapi:
   enabled: true
