--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -40,9 +40,11 @@ traefik:
 #  enableCjhProxy: true
 #  frontHostRule: "Host: staging-dbs.bh.org.il;"
   loadBalancerIP: 35.188.195.70
-  nodeHostName: gke-mojp2-default-pool-2a2857ee-0sn6
+#  nodeHostName: gke-mojp2-default-pool-2a2857ee-0sn6
   rootHost: "staging.myjewishstory.org"
 #  backupJob: true
+  dnsProvider: cloudflare
+  CLOUDFLARE_EMAIL: ori@uumpa.com
 
 kibana:
   enabled: true
