--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -22,6 +22,7 @@ minio:
 #  persistentDiskName: dbs-production-minio-data
 
 nginx:
+  enabled: true
   htpasswdSecretName: nginx-htpasswd
 
 pipelines:
