--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 env:
   matrix:
   - DEPLOY_ENVIRONMENT=staging DEPLOY_BRANCH=master
-  - DEPLOY_ENVIRONMENT=production DEPLOY_TAGS=true
+#  - DEPLOY_ENVIRONMENT=production DEPLOY_TAGS=true
 services:
 - docker
 script:
