--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -49,13 +49,10 @@ traefik:
   loadBalancerIP: 35.205.123.187
   nodeHostName: gke-mojp-default-pool-33bac5d8-rm42
   rootHost: "dbs.bh.org.il"
-  backupJob: true
+#  dnsProvider: cloudflare
+#  CLOUDFLARE_EMAIL:
 
 kibana:
-  enabled: false
-#  nodePool: turbo-pool
-
-elasticsearch:
   enabled: false
 #  nodePool: turbo-pool
 
@@ -80,12 +77,10 @@ mojp-dbs-pipelines:
 
 mojp-dbs-searchapi:
   enabled: false
-#  nodePool: turbo-pool
+#  ES_HOST: mojp-dbs-elasticsearch
 
 mojp-dbs-searchapp:
   enabled: false
-#  nodePool: turbo-pool
 
 mojp-dbs-elasticsearch:
   enabled: false
-#  nodePool: turbo-pool
